--- a/client/app/components/ui/Layout/header/auth-form/AuthForm.module.scss
+++ b/client/app/components/ui/Layout/header/auth-form/AuthForm.module.scss
@@ -4,10 +4,14 @@
 	.form {
 		@apply absolute p-4 right-2 w-60 z-20 rounded-lg;
 		top: calc(100% + 1.4rem);
-		background-color: #ffffff;
+		background-color: #dbe0f0;
+
+		.loginButton {
+			@apply mt-5 mb-1 text-center;
+		}
 
 		.register {
-			@apply text-gray-400 bg-white block text-center w-full;
+			@apply text-gray-400 bg-white block text-xs mt-2 text-center w-full;
 		}
 	}
 	.button {
