Framer motion, Стили для login form [CLIENT]

--- a/client/app/components/ui/Field/Field.module.scss
+++ b/client/app/components/ui/Field/Field.module.scss
@@ -18,6 +18,7 @@
 }
 
 .error {
-	@apply absolute -bottom-4 left-0 w-full text-primary;
+	@apply absolute left-0 w-full text-primary;
 	font-size: 0.75rem;
+	bottom: -24px;
 }
