--- a/client/app/components/ui/Layout/header/Header.module.scss
+++ b/client/app/components/ui/Layout/header/Header.module.scss
@@ -2,7 +2,7 @@
 	@apply flex-center-between p-4 border-b-2 border-solid border-white;
 
 	.logo {
-		@apply text-2xl text-black font-bold;
+		@apply block text-2xl text-black font-bold;
 		line-height: 0.8;
 	}
 }
