--- a/client/app/components/ui/Layout/header/auth-form/AuthForm.module.scss
+++ b/client/app/components/ui/Layout/header/auth-form/AuthForm.module.scss
@@ -11,7 +11,7 @@
 		}
 
 		.register {
-			@apply text-gray-400 bg-white block text-xs mt-2 text-center w-full;
+			@apply text-gray-600 bg-transparent text-xs mt-2 text-center w-full;
 		}
 	}
 	.button {
