--- a/client/app/components/screens/movie/reviews/add-review-form/AddReviewForm.module.scss
+++ b/client/app/components/screens/movie/reviews/add-review-form/AddReviewForm.module.scss
@@ -4,6 +4,6 @@
 	}
 
 	.button {
-		@apply text-2xl absolute right-0 top-0;
+		@apply text-xl absolute right-2 top-1.5 text-primary opacity-75  hover:opacity-100 transition-opacity;
 	}
 }
