--- a/client/app/components/ui/Field/Field.module.scss
+++ b/client/app/components/ui/Field/Field.module.scss
@@ -15,6 +15,18 @@
 			@apply border-primary outline-none;
 		}
 	}
+
+	&.withIcon {
+		@apply mb-0;
+
+		> input {
+			@apply pl-10;
+		}
+	}
+
+	> .icon {
+		@apply absolute top-2 left-2 text-stone-600 text-lg;
+	}
 }
 
 .error {
