--- a/client/app/assets/styles/globals.scss
+++ b/client/app/assets/styles/globals.scss
@@ -9,7 +9,12 @@ body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-	background-color: #ebeffd;
+	background-color: #eff1ff;
+}
+
+body {
+	// @apply px-5 py-10;
+	@apply px-40 py-10;
 }
 
 a {
