--- a/client/app/components/ui/layout/Layout.module.scss
+++ b/client/app/components/ui/layout/Layout.module.scss
@@ -1,3 +1,18 @@
+@import '../../../assets/styles/mixins';
+
+.wrapper {
+	@apply grid;
+	grid-template-columns: 1fr 18fr;
+	height: calc(100vh - 5rem);
+
+	.content {
+		@include shadow('lg', false);
+
+		@apply rounded-3xl;
+		background-color: #ebeffd;
+		z-index: 1;
+	}
+}
 .main {
-	@apply p-4;
+	@apply p-6 py-4;
 }
