--- a/client/app/components/ui/layout/header/Header.module.scss
+++ b/client/app/components/ui/layout/header/Header.module.scss
@@ -1,5 +1,5 @@
 .header {
-	@apply flex-center-between p-4 border-b-2 border-solid border-white;
+	@apply flex-center-between p-6 py-4 border-b-2 border-solid border-white;
 
 	.logo {
 		@apply block text-2xl text-black font-bold;
