--- a/client/app/components/screens/dashboard/main/middle-statistics/total-fees/TotalFees.module.scss
+++ b/client/app/components/screens/dashboard/main/middle-statistics/total-fees/TotalFees.module.scss
@@ -1,7 +1,5 @@
 .fees {
-	@apply text-white px-5 pb-14 pt-16
-	
-	rounded-2xl text-center relative;
+	@apply text-white px-5 pb-14 pt-16 rounded-2xl text-center relative;
 	background-image: linear-gradient(45deg, #813bfb, #3f68fe);
 	box-shadow: 0 5px 20px rgba(37, 12, 171, 0.3);
 
